objects/GSS_FieldHistoryTrack__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CR-00140215:This is used to store field details for which we need to track</description>
    <fields>
        <fullName>DataType__c</fullName>
        <description>Data type of the field</description>
        <label>DataType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldApi__c</fullName>
        <description>api name of the field</description>
        <label>FieldApi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <description>Label name of the field</description>
        <label>FieldLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>API Name of the object where the field present</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GSS_FieldHistoryTrack</label>
</CustomObject>